Fully replace ASM by LambdaMetaFactory